no need to run make check with wolfSSL build, this test is checking C# wrapper tests

--- a/.github/workflows/mono.yml
+++ b/.github/workflows/mono.yml
@@ -27,6 +27,7 @@ jobs:
         path: wolfssl
         configure: --enable-usersettings CPPFLAGS=-I$GITHUB_WORKSPACE/wolfssl/wrapper/CSharp
         install: true
+        check: false
 
     - name: Install mono-complete
       run: |
