--- a/wrapper/rust/include.am
+++ b/wrapper/rust/include.am
@@ -19,6 +19,7 @@ EXTRA_DIST += wrapper/rust/wolfssl/src/wolfcrypt.rs
 EXTRA_DIST += wrapper/rust/wolfssl/src/wolfcrypt/aes.rs
 EXTRA_DIST += wrapper/rust/wolfssl/src/wolfcrypt/dh.rs
 EXTRA_DIST += wrapper/rust/wolfssl/src/wolfcrypt/ecc.rs
+EXTRA_DIST += wrapper/rust/wolfssl/src/wolfcrypt/hkdf.rs
 EXTRA_DIST += wrapper/rust/wolfssl/src/wolfcrypt/hmac.rs
 EXTRA_DIST += wrapper/rust/wolfssl/src/wolfcrypt/random.rs
 EXTRA_DIST += wrapper/rust/wolfssl/src/wolfcrypt/rsa.rs
@@ -26,6 +27,7 @@ EXTRA_DIST += wrapper/rust/wolfssl/src/wolfcrypt/sha.rs
 EXTRA_DIST += wrapper/rust/wolfssl/tests/test_aes.rs
 EXTRA_DIST += wrapper/rust/wolfssl/tests/test_dh.rs
 EXTRA_DIST += wrapper/rust/wolfssl/tests/test_ecc.rs
+EXTRA_DIST += wrapper/rust/wolfssl/tests/test_hkdf.rs
 EXTRA_DIST += wrapper/rust/wolfssl/tests/test_hmac.rs
 EXTRA_DIST += wrapper/rust/wolfssl/tests/test_random.rs
 EXTRA_DIST += wrapper/rust/wolfssl/tests/test_rsa.rs
