--- a/configure.ac
+++ b/configure.ac
@@ -1196,6 +1196,7 @@ then
     test "$enable_session_ticket" = "" && enable_session_ticket=yes
     test "$enable_earlydata" = "" && enable_earlydata=yes
     test "$enable_rpk" = "" && enable_rpk=yes
+    test "$enable_writedup" = "" && enable_writedup=yes
 
     if test "$KERNEL_MODE_DEFAULTS" != "yes"
     then
