--- a/IDE/MSVS-2019-AZSPHERE/wolfssl_new_azsphere/CMakeLists.txt
+++ b/IDE/MSVS-2019-AZSPHERE/wolfssl_new_azsphere/CMakeLists.txt
@@ -45,6 +45,7 @@ list( REMOVE_ITEM SSL_SOURCES ../../../src/ssl_load.c )
 list( REMOVE_ITEM SSL_SOURCES ../../../src/ssl_misc.c )
 list( REMOVE_ITEM SSL_SOURCES ../../../src/ssl_p7p12.c )
 list( REMOVE_ITEM SSL_SOURCES ../../../src/ssl_sess.c )
+list( REMOVE_ITEM SSL_SOURCES ../../../src/ssl_sk.c )
 aux_source_directory( ${CRYPTO_SRC_DIR} CRYPTO_SOURCES )
 list( REMOVE_ITEM CRYPTO_SOURCES ../../../wolfcrypt/src/evp.c )
 list( REMOVE_ITEM CRYPTO_SOURCES ../../../wolfcrypt/src/misc.c )
