--- a/configure.ac
+++ b/configure.ac
@@ -694,9 +694,9 @@ AC_ARG_ENABLE([linuxkm-pie],
     [ENABLED_LINUXKM_PIE=$enableval],
     [ENABLED_LINUXKM_PIE=$ENABLED_FIPS]
     )
-if test "$ENABLED_LINUXKM_PIE" = "yes"
+if test "$ENABLED_LINUXKM" = "yes" && test "$ENABLED_LINUXKM_PIE" = "yes"
 then
-    AM_CFLAGS="$AM_CFLAGS -DHAVE_LINUXKM_PIE_SUPPORT"
+    AM_CFLAGS="$AM_CFLAGS -DWC_PIE_RELOC_TABLES"
 fi
 AC_SUBST([ENABLED_LINUXKM_PIE])
 
