--- a/linuxkm/Kbuild
+++ b/linuxkm/Kbuild
@@ -108,7 +108,6 @@ ifeq "$(ENABLED_LINUXKM_PIE)" "yes"
     # note, we need -fno-stack-protector to avoid references to
     # "__stack_chk_fail" from the wolfCrypt container.
     PIE_FLAGS := -fPIE -fno-stack-protector -fno-toplevel-reorder
-    PIE_SUPPORT_FLAGS := -DUSE_WOLFSSL_LINUXKM_PIE_REDIRECT_TABLE
     # the kernel sanitizers generate external references to
     # __ubsan_handle_out_of_bounds(), __ubsan_handle_shift_out_of_bounds(), etc.
     KASAN_SANITIZE := n
@@ -218,12 +217,17 @@ RENAME_PIE_TEXT_AND_DATA_SECTIONS := \
 	    $(OBJCOPY) $$($(READELF) --sections --wide "$$file"	|	\
 	      $(AWK) ' 							\
 	      {								\
-	          if (match($$0, "^ *\\[ *[0-9]+\\] +\\.(text|rodata|data|bss)(\\.[^ ]+)? ", a)) { \
-		      printf("--rename-section .%s%s=.%s_wolfcrypt ", a[1], a[2], a[1]); \
+	          if (match($$0, "^ *\\[ *[0-9]+\\] +\\.(text|rodata|data|bss)(\\.[^ ]+)? ", a)) \
+		  {							\
+		      printf("--rename-section .%s%s=.%s_wolfcrypt ",	\
+			     a[1], a[2], a[1]);				\
+		  }							\
+		  else if (match($$0, "^ *\\[ *[0-9]+\\] +\\.([^ ]+)\\.(text|rodata|data|bss) ", a)) \
+		  {							\
+		      printf("--rename-section .%s.%s=.%s_wolfcrypt ", a[1], a[2], a[2]); \
 		  }							\
 	      }') "$$file" || exit $$?;					\
 	done; 								\
-	[ "$(KERNEL_ARCH_X86)" != "yes" ] ||				\
 	{ $(READELF) --sections --syms --wide $(WOLFCRYPT_PIE_FILES) |	\
 	$(AWK) -v obj="$(obj)" '					\
 	    /^File:/ {							\
