TLS 1.2 CertificateVerify: req sig alg to have been in CR
The signature algorithm specified in CertificateVerify must have been in
the CertificateRequest. Add check.

The cipher suite test cases, when client auth and RSA are built-in and
use the default client certificate and use the *-ECDSA-* cipher
suites, no longer work. The client certificate must be ECC when the
cipher suite has ECDSA. Don't run them for that build.

--- a/tests/test-fails.conf
+++ b/tests/test-fails.conf
@@ -176,6 +176,23 @@
 -l ECDHE-ECDSA-AES128-GCM-SHA256
 -H verifyFail
 
+# Client is using RSA certificate with ECDSA cipher suite. Server will fail.
+# server
+-v 3
+-l ECDHE-ECDSA-AES128-GCM-SHA256
+-c ./certs/server-ecc.pem
+-k ./certs/ecc-key.pem
+-A ./certs/client-cert.pem
+-H exitWithRet
+
+# client
+-v 3
+-l ECDHE-ECDSA-AES128-GCM-SHA256
+-c ./certs/client-cert.pem
+-k ./certs/client-key.pem
+-A ./certs/ca-ecc-cert.pem
+-H exitWithRet
+
 # server send alert on no mutual authentication
 -v 3
 -F
