add WOLFSSL_PUBLIC_MP to --enable-jni for wolfJCE RSA KeyFactory support

--- a/configure.ac
+++ b/configure.ac
@@ -7574,6 +7574,7 @@ then
     AM_CFLAGS="$AM_CFLAGS -DWOLFSSL_ALWAYS_VERIFY_CB"
     AM_CFLAGS="$AM_CFLAGS -DWOLFSSL_ALWAYS_KEEP_SNI"
     AM_CFLAGS="$AM_CFLAGS -DWOLFSSL_TLS13_MIDDLEBOX_COMPAT"
+    AM_CFLAGS="$AM_CFLAGS -DWOLFSSL_PUBLIC_MP"
 
     # Enable openssl compat layer AES-CTS to maintain FIPS compatibility
     AM_CFLAGS="$AM_CFLAGS -DHAVE_CTS"
